googlchrome scrollbar css fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@ a {
     color: black;
 }
 
+::-webkit-scrollbar {
+    width: 5px; /* adjust width as needed */
+}
+  
+::-webkit-scrollbar-track {
+    background-color: #16181a; /* track color */
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #5a5a59; /* thumb color */
+}
+
+html {
+    overflow: hidden;
+}
+
 body {
     background-color: #0d1117;
     display: flex;
@@ -41,7 +57,7 @@ main {
 
 textarea {
     border: none;
-    overflow: auto;
+    overflow-x: hidden;
     outline: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
